# boardgame-timer

./: Cargo.toml  index.html
docs/: index.html  style-542b9e119036e489.css  style-bf46099fefde8c9e.css  timer-85a8dcb4e17974fa.js  timer-8f2447cd195c0c5b.js  timer-8f2447cd195c0c5b_bg.wasm  timer-ae9cfaf59b7ea195_bg.wasm
src/: main.rs  timer.rs
src-tauri/: tauri.conf.json
src/timer/: config.rs
