[package]
name = "timer"
version = "0.1.0"
edition = "2024"


[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["DomRect", "ResizeObserver", "ResizeObserverEntry"] }
web-time = "1.1.0"
